crates/crane/src/snapshots/crane__compiler__tests__snake_case_union_name.snap
---
source: crates/crane/src/compiler.rs
expression: "&stderr"
---
Error: A type error occurred.
   ╭─[snake_case.crane:1:2]
   │
 1 │ union snake_cased_union {
   │       ────────┬────────  
   │               ╰────────── Union names must be written in PascalCase.
   │               │          
   │               ╰────────── Try writing it as `SnakeCasedUnion` instead.
───╯

